--- a/galleria/galleria/css/main.css
+++ b/galleria/galleria/css/main.css
@@ -219,3 +219,48 @@ header h1 {
         page-break-after: avoid;
     }
 }
+! TÄHÄN TULEE KAIKKI OMA KOODI !
+
+body {
+	display: flex;
+	flex-wrap: wrap;
+}
+header {  
+	width: 100%;
+}
+
+aside {  
+	width: 25%;
+}
+main {
+	width: 75%;
+}
+@media only screen and (max-width: 600px){
+	main, aside {width: 100%;}
+}
+
+ul { 
+display: flex; flex-wrap: wrap; 
+} 
+h3,
+figcaption {
+  position: absolute;
+  top: -0.55em;
+  background-color: rgba(0, 0, 0, 0.5); 
+  color: white;
+  width: 100%;
+}
+figure {
+	position: relative;
+	margin: 10px;
+} 
+ul {
+	list-style: none;
+} 
+
+
+
+
+
+
+
