--- a/desing-tehtava-versio-2/style.css
+++ b/desing-tehtava-versio-2/style.css
@@ -59,9 +59,15 @@ header h1 {
 	niin näyttää tyylikkäämmältä */
 
 	/*Voit halutessasi myös esim. keskittää otsikon (text-align: center;)*/
+    background-color: #5ADBFF;
+	margin-top: 15px;
+	text-align: center;
+	padding: 15px;
+    font-size: 40px;
+	text-align: center;
+	border: 2px solid #ddd;
+	box-shadow: 0 0 10px rgba(0, 0, 255, 0.8);
 
-	font-size: 20px;
-	background-color: #5ADBFF;
 }
 
 /*--------- MAIN MENU ---------------------*/
@@ -77,6 +83,12 @@ header h1 {
 	niin näyttää tyylikkäämmältä */
 	
 	/*Voi muokata täällä myös background-, color-arvoja.*/
+
+    display: flex;
+    justify-content: center; 
+	background-color: #8E3B00;
+	margin: 0px;
+	padding: 0px;
 		
 }
 
@@ -87,6 +99,15 @@ header h1 {
 
 	/*Voi muokata täällä myös background-, color-arvoja.*/
 
+	background-color: #1A1E2C;
+	color: #FE7F2D;
+	padding: 10px;
+	margin: 20px;
+	margin-top: 15px;
+	border-radius: 5px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+	border: 1px solid #FE7F2D;
+
 }
 
 /*Link in menu item*/
@@ -96,6 +117,7 @@ header h1 {
 
 	/*Voi muokata täällä myös background-, color- 
 	font-size- ja font-family-arvoja.*/
+	color: #FE7F2D;
 
 }
 
@@ -106,11 +128,22 @@ header h1 {
 	kun kursori on sen päällä. Muuta paremmaksi */
 	color: black; 
 	background: white; 
+
 }
 
 /*------- ARTICLE BUTTONS -------------------*/
 /*Button in end of each article*/
 .button { 
+
+	background-color: #1A1E2C;
+	color: #FE7F2D;
+	border-radius: 5px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+	border: 1px solid #FE7F2D;
+	padding: 5px;
+	
+	
+	
 	/*saatat haluta tehdä napista aika samanlaisen
 	kuin valikkolinkit, mutta toisenlainenkin 
 	voi olla ihan tyylikäs*/
@@ -131,7 +164,9 @@ header h1 {
 	/*Tällä koodilla saat fancyn varjon :) 
 		box-shadow: 0px 2px 10px rgba(0,0,0,50%); 
 	*/
-
+ 
+ 
+	
 
 }
 
@@ -158,7 +193,11 @@ main {
 	ja sitten artikkeleihin (ks. alla) esim. ,
 	jolloin artikkelit asettuvat vierekkäin.*/
 	
-	display: flex; flex-wrap:wrap; justify-content: center;
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+	background-color: #E27526;
+	
 }
 
 /*Frame of each "article"*/
@@ -174,6 +213,19 @@ article {
 	niin näyttää tyylikkäämmältä! Teksti, kuva ym. ei saa olla 
 	reunaan asti, vaan reunassa pitää olla marginaali (teknisesti
 	margin tai padding).*/
+	
+  box-sizing: border-box; 
+  width: calc(33.33%-60px);
+  background-color: #5ADBFF;
+  color: black;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px; 
+  margin: 15px;
+  margin-top: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  
+
 
 }
 
@@ -181,6 +233,12 @@ article {
 
 /*article title*/
 article h2 { 
+background-color: #FE7F2D;
+padding: 10px; 
+border: 3px solid #ddd;
+margin: 5px;
+text-align: center;
+margin-top: 15px;
 
 	/*Yksittäisen artikkelin otsikko*/
 
@@ -201,12 +259,16 @@ article p {
 	/*Saatat haluta muokata täällä 
 	background-, color-, margin- ja padding-
 	font-size- ja font-family-arvoja.*/
+	padding: 15px;
+	margin: 5px;
+	margin-top: 15px;
 
 }
 
 /* "Images" */
 .article-image { 
-    max-width: 100%; /*Tämä tekee sen, että kuva ei mene yli reunasta.*/
+    max-width: 94%; /*Tämä tekee sen, että kuva ei mene yli reunasta.*/
+    
 
 	/*Kuva voi olla koko artikkelin levyinen tai pienempi. 
 	Esim. alla olevalla kuvasta tulisi pienempi (=50%)
@@ -215,6 +277,11 @@ article p {
 		min-width: 150px;
 		float: left; 
 	*/
+	border: 3px solid #FE7F2D;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+	margin-top: 15px;
+    margin-left: 5px;
+	
 }
 
 /*-------- FOOTER ---------------*/
