--- a/desing-tehtava-versio-2/style.css
+++ b/desing-tehtava-versio-2/style.css
@@ -61,6 +61,7 @@ header h1 {
 	/*Voit halutessasi myös esim. keskittää otsikon (text-align: center;)*/
     background-color: #5ADBFF;
 	margin-top: 15px;
+	margin-bottom: 0px;
 	text-align: center;
 	padding: 15px;
     font-size: 40px;
@@ -88,7 +89,8 @@ header h1 {
     justify-content: center; 
 	background-color: #8E3B00;
 	margin: 0px;
-	padding: 0px;
+	
+	
 		
 }
 
@@ -100,7 +102,7 @@ header h1 {
 	/*Voi muokata täällä myös background-, color-arvoja.*/
 
 	background-color: #1A1E2C;
-	color: #FE7F2D;
+	color: #FE893E;
 	padding: 10px;
 	margin: 20px;
 	margin-top: 15px;
@@ -136,7 +138,7 @@ header h1 {
 .button { 
 
 	background-color: #1A1E2C;
-	color: #FE7F2D;
+	color: #FE893E;
 	border-radius: 5px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 	border: 1px solid #FE7F2D;
@@ -222,7 +224,9 @@ article {
   border-radius: 8px;
   padding: 20px; 
   margin: 15px;
-  margin-top: 15px;
+  margin-top: 40px;
+  margin-right: 60px;
+  margin-left: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   
 
@@ -290,5 +294,8 @@ footer {
 	/*Kannattaa laittaa footeriin vähintään padding 
 	ja ehkä eri taustaväri, jotta se erottuu hiukan.*/
 	
+	background-color: #8E3B00;
+	color: #EAFEFF;
+	padding: 10px;
 }
 
