--- a/desing-tehtava-versio-2/style.css
+++ b/desing-tehtava-versio-2/style.css
@@ -144,6 +144,8 @@ header h1 {
 	border: 1px solid #FE7F2D;
 	padding: 5px;
 	
+	margin-top: 10px;
+	display: inline-block;
 	
 	
 	/*saatat haluta tehdä napista aika samanlaisen
@@ -225,8 +227,8 @@ article {
   padding: 20px; 
   margin: 15px;
   margin-top: 40px;
-  margin-right: 60px;
-  margin-left: 50px;
+  margin-right: 30px;
+  margin-left: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   
 
@@ -263,8 +265,7 @@ article p {
 	/*Saatat haluta muokata täällä 
 	background-, color-, margin- ja padding-
 	font-size- ja font-family-arvoja.*/
-	padding: 15px;
-	margin: 5px;
+	margin: 15px;
 	margin-top: 15px;
 
 }
