--- a/projekti/custom.css
+++ b/projekti/custom.css
@@ -1,3 +1,19 @@
-header {
-	background-color: white;
+* {
+  font-family: 'Bubblegum Sans', sans-serif !important;
+  font-family: 'Cormorant Garamond', serif !important;
+  font-family: 'Jost', sans-serif !important;
+}
+
+
+
+
+.hd {
+  background-color: white !important;
+}
+h1 {
+  color: #2c2c2c !important;
+}
+
+.text.text-white {
+  color: #2c2c2c !important;
 }
