--- a/projekti/custom.css
+++ b/projekti/custom.css
@@ -3,9 +3,9 @@
   font-family: 'Cormorant Garamond', serif !important;
   font-family: 'Jost', sans-serif !important;
 }
-
-
-
+body {
+	background-color: #F4E7C5 !important;
+}
 
 .hd {
   background-color: white !important;
@@ -16,4 +16,95 @@ h1 {
 
 .text.text-white {
   color: #2c2c2c !important;
+  font-size: 16px !important;
+  text-transform: capitalize !important;
+  padding: 10px 20px !important;
+  font-weight: 400 !important;
+  transition: all 0.42s ease !important; 
+}
+
+}
+
+.kirjaudu {
+	background-color: #2c677c !important;
+	color: white !important;
+}
+.rekisteröidy {
+	background-color: #2c677c !important;
+	color: white !important;
+}
+.etsi {
+	margin-left: 20px !important;
+}
+{
+    color: #2c2c2c;
+    font-size: 16px;
+    text-transform: capitalize;
+    padding: 10px 20px;
+    font-weight: 400;
+    transition: all 0.42s ease; 
+}
+.tekstit {
+	color: #2c2c2c !important;
+}
+.nappula {
+	background-color: #2c677c !important;
+	color: white !important;
+}
+.taideteokset {
+	text-align: center;
+	font-size: 45px;
+    margin-bottom: 20px;
+    color: #333;
+}
+.osio {
+	margin-bottom: 100px !important;
+	margin-right: 80px !important;
+	margin-left: 80px !important;
+	margin-top: 20px !important;
+}
+.otsikko {
+	font-size: 40px !important;
+	margin-left: 10px !important
+}
+
+.kuvailu {
+	font-size: 18px !important;
+    color: black !important;
+    margin-left: 10px !important
+}
+.osio3 {
+	margin: 20px !important;
+	background-color: #2c2c2c !important;
+	padding: 90px !important;
+	border-radius: 20px !important;
+}
+.card {
+	margin: 20px !important
+}
+main {
+	background-color: #F4E7C5 !important;
+}
+footer {
+	color: black !important;
+}
+.kokonaisuudet {
+	color: white;
+	text-align: center;
+	font-size: 45px;
+	margin-bottom: 50px;
+}
+.viimeinen {
+	margin: 40px !important;
+	margin-bottom: 10px !important;
+}
+.lista {
+	margin: 40px !important;
+} 
+.btn {
+	background-color: #2c677c !important;
+	color: white !important;
+}
+.px-3 {
+	background-color: white !important;
 }
