--- a/projekti/custom.css
+++ b/projekti/custom.css
@@ -23,8 +23,6 @@ h1 {
   transition: all 0.42s ease !important; 
 }
 
-}
-
 .kirjaudu {
 	background-color: #2c677c !important;
 	color: white !important;
@@ -35,14 +33,7 @@ h1 {
 }
 .etsi {
 	margin-left: 20px !important;
-}
-{
-    color: #2c2c2c;
-    font-size: 16px;
-    text-transform: capitalize;
-    padding: 10px 20px;
-    font-weight: 400;
-    transition: all 0.42s ease; 
+	margin-bottom: 10px !important;
 }
 .tekstit {
 	color: #2c2c2c !important;
@@ -95,7 +86,7 @@ footer {
 	margin-bottom: 50px;
 }
 .viimeinen {
-	margin: 40px !important;
+	margin: 20px !important;
 	margin-bottom: 10px !important;
 }
 .lista {
