--- a/projekti/projekti.css
+++ b/projekti/projekti.css
@@ -131,7 +131,7 @@ img {
 
 .row {
     display: flex;
-    flex-wrap: wrap; /* Lisätty flex-wrap */
+    flex-wrap: wrap; 
 }
 
 .flex {
@@ -272,9 +272,7 @@ li {
 	justify-content: space-between;
 	align-items: center;
 	margin: 75px auto;
-	text-align: center;
-	
-	
+	text-align: center;	
 }
 .card {
 	width: 100%;
@@ -316,6 +314,8 @@ footer {
 	text-align: center;
 	color: white;
 	padding: 15px;
+	background-color: #2c2c2c;
+	padding: 40px;
 }
 
 @media screen and (max-width: 768px) {
